--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -1,33 +1,16 @@
-/*body {*/
-    /*font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";*/
-/*}*/
-.form-row {
-    margin: 10px 0 0 10px;
-}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
-.form-select {
-    width: 196px!important;
-}
+ul, ol {
+  list-style: none; }
 
-.plugin-action {
-    color: red;
-    cursor: pointer;
-}
+a {
+  cursor: pointer;
+  text-decoration: none; }
 
-.search-area {
-    border: 1px solid #ccc;
-    background: #efefef;
-    padding: 10px;
-}
+.active {
+  color: #30A3FC; }
 
-.search-area .search-item {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-.search-content {
-    display: inline-block;
-    width: 180px;
-
-}
-
+/*# sourceMappingURL=default.css.map */
